--- a/Journal/index.html
+++ b/Journal/index.html
@@ -61,7 +61,6 @@
 	<script type="text/javascript" src="app/host/updateChecker.js"></script>
 	<script type="text/javascript" src="app/util/extensions.js"></script>
 	<script type="text/javascript" src="app/util/functions.js"></script>
-	<script type="text/javascript" src="app/util/livereload.js"></script>
 	<script type="text/javascript" src="app/util/overlay.js"></script>
 	<script type="text/javascript" src="app/util/quantize.js"></script>
 	<script type="text/javascript" src="app/classes/activity.js"></script>
@@ -78,6 +77,7 @@
 	<script type="text/javascript" src="app/classes/rendering/heatmap-renderer.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/caches/canvas-cache.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/caches/layer-cache.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/features/mark-feature.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/shapes/marker-rectangle.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/document-history-viewer.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/document-viewer.js"></script>
@@ -85,12 +85,11 @@
 	<script type="text/javascript" src="app/services/app.service.js"></script>
 	<script type="text/javascript" src="app/services/client.service.js"></script>
 	<script type="text/javascript" src="app/services/comment.service.js"></script>
-	<script type="text/javascript" src="app/services/derivation.service.js"></script>
 	<script type="text/javascript" src="app/services/entity.service.js"></script>
 	<script type="text/javascript" src="app/services/file.service.js"></script>
 	<script type="text/javascript" src="app/services/filesystem.service.js"></script>
 	<script type="text/javascript" src="app/services/formatting.service.js"></script>
-	<script type="text/javascript" src="app/services/image.service.js"></script>
+	<script type="text/javascript" src="app/services/mark.service.js"></script>
 	<script type="text/javascript" src="app/services/project.service.js"></script>
 	<script type="text/javascript" src="app/services/selection.service.js"></script>
 	<script type="text/javascript" src="app/services/settings.service.js"></script>
