Implemented observable viewer commands using command pattern.

--- a/Journal/index.html
+++ b/Journal/index.html
@@ -63,24 +63,6 @@
 	<script type="text/javascript" src="app/util/functions.js"></script>
 	<script type="text/javascript" src="app/util/overlay.js"></script>
 	<script type="text/javascript" src="app/util/quantize.js"></script>
-	<script type="text/javascript" src="app/classes/activity.js"></script>
-	<script type="text/javascript" src="app/classes/editing-statistics.js"></script>
-	<script type="text/javascript" src="app/classes/entity-cache.js"></script>
-	<script type="text/javascript" src="app/classes/entity.js"></script>
-	<script type="text/javascript" src="app/classes/event-dispatcher.js"></script>
-	<script type="text/javascript" src="app/classes/layer-tree-node.js"></script>
-	<script type="text/javascript" src="app/classes/layer-tree.js"></script>
-	<script type="text/javascript" src="app/classes/layer.js"></script>
-	<script type="text/javascript" src="app/classes/marker.js"></script>
-	<script type="text/javascript" src="app/classes/rendering/document-viewer-base.js"></script>
-	<script type="text/javascript" src="app/classes/rendering/document-viewer-cache.js"></script>
-	<script type="text/javascript" src="app/classes/rendering/heatmap-renderer.js"></script>
-	<script type="text/javascript" src="app/classes/rendering/caches/canvas-cache.js"></script>
-	<script type="text/javascript" src="app/classes/rendering/caches/layer-cache.js"></script>
-	<script type="text/javascript" src="app/classes/rendering/features/mark-feature.js"></script>
-	<script type="text/javascript" src="app/classes/rendering/shapes/marker-rectangle.js"></script>
-	<script type="text/javascript" src="app/classes/rendering/viewers/document-history-viewer.js"></script>
-	<script type="text/javascript" src="app/classes/rendering/viewers/document-viewer.js"></script>
 	<script type="text/javascript" src="app/services/agent.service.js"></script>
 	<script type="text/javascript" src="app/services/app.service.js"></script>
 	<script type="text/javascript" src="app/services/client.service.js"></script>
@@ -98,15 +80,40 @@
 	<script type="text/javascript" src="app/services/update.service.js"></script>
 	<script type="text/javascript" src="app/services/window.service.js"></script>
 	<script type="text/javascript" src="app/filters/reverse.js"></script>
+	<script type="text/javascript" src="app/classes/activity.js"></script>
+	<script type="text/javascript" src="app/classes/editing-statistics.js"></script>
+	<script type="text/javascript" src="app/classes/entity-cache.js"></script>
+	<script type="text/javascript" src="app/classes/entity.js"></script>
+	<script type="text/javascript" src="app/classes/event-dispatcher.js"></script>
+	<script type="text/javascript" src="app/classes/layer-tree-node.js"></script>
+	<script type="text/javascript" src="app/classes/layer-tree.js"></script>
+	<script type="text/javascript" src="app/classes/layer.js"></script>
+	<script type="text/javascript" src="app/classes/marker.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/heatmap-renderer.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewer-base.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewer-cache.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewer-command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/caching/canvas-cache.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/caching/layer-cache.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/mark-create.command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/mark-delete.command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/mark-update.command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-pan.command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-select.command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/renderers/mark-rectangle.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/renderers/mark-renderer.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/document-history-viewer.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/document-viewer.js"></script>
 	<script type="text/javascript" src="app/directives/art-calendar/art-calendar.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-control/art-chat-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-client-state-info/art-client-state-info.js"></script>
 	<script type="text/javascript" src="app/directives/art-color-picker/art-color-picker.js"></script>
+	<script type="text/javascript" src="app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.js"></script>
+	<script type="text/javascript" src="app/directives/art-document-viewer/art-document-viewer.js"></script>
 	<script type="text/javascript" src="app/directives/art-editing-history/art-editing-history.js"></script>
 	<script type="text/javascript" src="app/directives/art-editing-stats/art-editing-stats.js"></script>
 	<script type="text/javascript" src="app/directives/art-file-card/art-file-card.js"></script>
 	<script type="text/javascript" src="app/directives/art-file-list/art-file-list.js"></script>
-	<script type="text/javascript" src="app/directives/art-file-preview/art-file-preview.js"></script>
 	<script type="text/javascript" src="app/directives/art-keyboard-input-handler/art-keyboard-input-handler.js"></script>
 	<script type="text/javascript" src="app/directives/art-layer-control/art-layer-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-photo-picker/art-photo-picker.js"></script>
