Fixed javascript errors in release build of Artivity Journal.

--- a/Journal/index.html
+++ b/Journal/index.html
@@ -53,38 +53,11 @@
 	<script src="bower_components/yasgui/dist/yasgui.bundled.min.js"></script>
 	<!-- endbower -->
 	<!-- start auto template tags -->
-	<script type="text/javascript" src="app/app.conf.js"></script>
-	<script type="text/javascript" src="app/app.route.js"></script>
-	<script type="text/javascript" src="app/app.api.js"></script>
-	<script type="text/javascript" src="app/app.translation.js"></script>
-	<script type="text/javascript" src="app/host/app.dragDrop.js"></script>
-	<script type="text/javascript" src="app/host/updateChecker.js"></script>
-	<script type="text/javascript" src="app/util/extensions.js"></script>
-	<script type="text/javascript" src="app/util/functions.js"></script>
-	<script type="text/javascript" src="app/util/overlay.js"></script>
-	<script type="text/javascript" src="app/util/quantize.js"></script>
-	<script type="text/javascript" src="app/services/agent.service.js"></script>
-	<script type="text/javascript" src="app/services/app.service.js"></script>
-	<script type="text/javascript" src="app/services/client.service.js"></script>
-	<script type="text/javascript" src="app/services/comment.service.js"></script>
-	<script type="text/javascript" src="app/services/entity.service.js"></script>
-	<script type="text/javascript" src="app/services/file.service.js"></script>
-	<script type="text/javascript" src="app/services/filesystem.service.js"></script>
-	<script type="text/javascript" src="app/services/formatting.service.js"></script>
-	<script type="text/javascript" src="app/services/mark.service.js"></script>
-	<script type="text/javascript" src="app/services/project.service.js"></script>
-	<script type="text/javascript" src="app/services/selection.service.js"></script>
-	<script type="text/javascript" src="app/services/settings.service.js"></script>
-	<script type="text/javascript" src="app/services/sync.service.js"></script>
-	<script type="text/javascript" src="app/services/translation.service.js"></script>
-	<script type="text/javascript" src="app/services/update.service.js"></script>
-	<script type="text/javascript" src="app/services/window.service.js"></script>
-	<script type="text/javascript" src="app/filters/reverse.js"></script>
+	<script type="text/javascript" src="app/conf.js"></script>
 	<script type="text/javascript" src="app/classes/activity.js"></script>
 	<script type="text/javascript" src="app/classes/editing-statistics.js"></script>
 	<script type="text/javascript" src="app/classes/entity-cache.js"></script>
 	<script type="text/javascript" src="app/classes/entity.js"></script>
-	<script type="text/javascript" src="app/classes/event-dispatcher.js"></script>
 	<script type="text/javascript" src="app/classes/layer-tree-node.js"></script>
 	<script type="text/javascript" src="app/classes/layer-tree.js"></script>
 	<script type="text/javascript" src="app/classes/layer.js"></script>
@@ -104,6 +77,32 @@
 	<script type="text/javascript" src="app/classes/rendering/viewers/renderers/mark-renderer.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/document-history-viewer.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/document-viewer.js"></script>
+	<script type="text/javascript" src="app/app.js"></script>
+	<script type="text/javascript" src="app/host/app.dragDrop.js"></script>
+	<script type="text/javascript" src="app/host/event-dispatcher.js"></script>
+	<script type="text/javascript" src="app/host/update-checker.js"></script>
+	<script type="text/javascript" src="app/util/extensions.js"></script>
+	<script type="text/javascript" src="app/util/functions.js"></script>
+	<script type="text/javascript" src="app/util/overlay.js"></script>
+	<script type="text/javascript" src="app/util/quantize.js"></script>
+	<script type="text/javascript" src="app/services/agent.service.js"></script>
+	<script type="text/javascript" src="app/services/api.service.js"></script>
+	<script type="text/javascript" src="app/services/app.service.js"></script>
+	<script type="text/javascript" src="app/services/client.service.js"></script>
+	<script type="text/javascript" src="app/services/comment.service.js"></script>
+	<script type="text/javascript" src="app/services/entity.service.js"></script>
+	<script type="text/javascript" src="app/services/file.service.js"></script>
+	<script type="text/javascript" src="app/services/filesystem.service.js"></script>
+	<script type="text/javascript" src="app/services/formatting.service.js"></script>
+	<script type="text/javascript" src="app/services/mark.service.js"></script>
+	<script type="text/javascript" src="app/services/project.service.js"></script>
+	<script type="text/javascript" src="app/services/selection.service.js"></script>
+	<script type="text/javascript" src="app/services/settings.service.js"></script>
+	<script type="text/javascript" src="app/services/sync.service.js"></script>
+	<script type="text/javascript" src="app/services/translation.service.js"></script>
+	<script type="text/javascript" src="app/services/update.service.js"></script>
+	<script type="text/javascript" src="app/services/window.service.js"></script>
+	<script type="text/javascript" src="app/filters/reverse.js"></script>
 	<script type="text/javascript" src="app/directives/art-calendar/art-calendar.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-control/art-chat-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-client-state-info/art-client-state-info.js"></script>
@@ -143,6 +142,8 @@
 	<script type="text/javascript" src="app/views/settings/settings.controller.js"></script>
 	<script type="text/javascript" src="app/views/setup/setup.controller.js"></script>
 	<script type="text/javascript" src="app/views/start/start.controller.js"></script>
+	<script type="text/javascript" src="app/translation.js"></script>
+	<script type="text/javascript" src="app/route.js"></script>
 	<!-- end auto template tags -->
 	<script>
 		if (window.module) module = window.module;
