--- a/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
@@ -1,16 +1,16 @@
 <div class="toolbar">
     <div class="col">
-        <a class="btn" data-command="viewer-select" style="transform: scaleX(-1)">
+        <a class="btn" data-command="viewerSelect" style="transform: scaleX(-1)">
             <i class="zmdi zmdi-arrow-right-top"></i>
         </a>
     </div>
     <div class="col">
-        <a class="btn" data-command="viewer-pan">
+        <a class="btn" data-command="viewerPan">
             <i class="zmdi zmdi-arrows"></i>
         </a>
     </div>
     <div class="col">
-        <a class="btn" data-command="mark-create">
+        <a class="btn" data-command="markCreate">
             <i class="zmdi zmdi-photo-size-select-small"></i>
         </a>
     </div>
