--- a/Journal/index.html
+++ b/Journal/index.html
@@ -73,6 +73,8 @@
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/mark-update.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-pan.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-select.command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-zoom-in.command.js"></script>
+	<script type="text/javascript" src="app/classes/rendering/viewers/commands/viewer-zoom-out.command.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/renderers/mark-rectangle.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/renderers/mark-renderer.js"></script>
 	<script type="text/javascript" src="app/classes/rendering/viewers/document-history-viewer.js"></script>
