Implemented basic topics module and support for creating marks for topics.

--- a/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
@@ -10,7 +10,7 @@
         </a>
     </div>
     <div class="col">
-        <a class="btn" data-command="markCreate">
+        <a class="btn" data-command="createMark" data-param="t.viewer.entity">
             <i class="zmdi zmdi-photo-size-select-small"></i>
         </a>
     </div>
