--- a/Journal/app/directives/art-document-viewer/art-document-viewer.html
+++ b/Journal/app/directives/art-document-viewer/art-document-viewer.html
@@ -1,12 +1,7 @@
-<div style="background-color:#f2f2f2;">
-    <div class="table-layout">
-        <div class="row">
-            <art-document-viewer-toolbar></art-document-viewer-toolbar>
-        </div>
-        <div class="row expand">
-            <canvas id="canvas">
-                HTML canvas is not supported by your browser.
-            </canvas>
-        </div>
-    </div>
+<div class="layout-root" style="background-color:#f2f2f2;">
+    <canvas id="canvas">
+        HTML canvas is not supported by your browser.
+    </canvas>
+
+    <art-document-viewer-toolbar style="position: absolute; top: 0; left: 0;"></art-document-viewer-toolbar>
 </div>
