--- a/Journal/app/dialogs/update-project-dialog/update-project-dialog.html
+++ b/Journal/app/dialogs/update-project-dialog/update-project-dialog.html
@@ -10,14 +10,14 @@
 		<div class="col-xs-12">
 			<div class="layout-container padding-x-xl">
 				<label for="title">Title</label>
-				<input type="text" class="form-control" id="title" name="title" placeholder="Example Project" ng-model="t.project.Name" ng-enter="t.save()" required>
+				<input type="text" class="form-control" id="title" name="title" placeholder="Example Project" ng-model="t.project.Name" ng-enter="t.commit()" required>
 			</div>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="toolbar pull-right">
-				<button class="btn btn-success" type="submit" ng-click="t.save()" ng-disabled="projectForm.title.$invalid"><i class="zmdi zmdi-check"></i></button>
+				<button class="btn btn-success" type="submit" ng-click="t.commit()" ng-disabled="projectForm.title.$invalid"><i class="zmdi zmdi-check"></i></button>
 				<button class="btn" ng-click="t.cancel()"><i class="zmdi zmdi-close"></i></button>
 			</div>
 		</div>
