--- a/Journal/app/directives/art-chat-control/art-chat-control.html
+++ b/Journal/app/directives/art-chat-control/art-chat-control.html
@@ -4,7 +4,8 @@
             <div class="ctl-protocol">
                 <div class="scroll-container scroll-y layout-fix">
                     <ul class="comment-list list-unstyled">
-                        <li class="comment-item list-item list-item-unstyled" ng-repeat="comment in t.comments" ng-class="{selected: t.selectedComment === comment}">
+                        <li class="comment-item list-item list-item-unstyled" ng-repeat="comment in t.comments" ng-class="{selected: t.selectedComment === comment}"
+                            ng-mouseenter="t.showMarks(comment)" ng-mouseleave="t.hideMarks(comment)">
                             <div class="comment-container" ng-click="t.selectComment(comment)">
                                 <div class="comment" ng-class="{'comment-user': t.isUserComment(comment)}">
                                     <div class="comment-avatar">
@@ -18,6 +19,10 @@
                                     <div class="comment-time">
                                         <label class="time pull-right small">{{t.getFormattedTime(comment.time, 'hh:mm')}}</label>
                                     </div>
+
+                                    <a class="btn" ng-click="t.createMark(comment)" style="position: absolute; bottom: 0; right: 0;">
+                                        <i class="zmdi zmdi-photo-size-select-small"></i>
+                                    </a>
                                 </div>
                             </div>
                         </li>
@@ -30,10 +35,10 @@
     <div class="row">
         <div class="layout-container">
             <div class="ctl-comment">
-                <textarea class="ui-autosize" placeholder="{{ 'FILEVIEW.WRITE_MSG' | translate }}" ng-enter="t.postComment()" ng-model="t.comment.text"
+                <textarea class="ui-autosize" placeholder="{{ 'FILEVIEW.WRITE_MSG' | translate }}" ng-enter="t.postComment($event)" ng-model="t.comment.text"
                     ng-change="t.updateComment()" ng-esc="t.resetComment()">
                 </textarea>
-                <button class="btn btn-default btn-post pull-right" ng-click="t.postComment(t.comment)">Post</button>
+                <button class="btn btn-default btn-post pull-right" ng-click="t.postComment($event)">Post</button>
                 <div class="clearfix"></div>
             </div>
         </div>
