--- a/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
+++ b/Journal/app/directives/art-document-viewer-toolbar/art-document-viewer-toolbar.html
@@ -14,4 +14,16 @@
             <i class="zmdi zmdi-photo-size-select-small"></i>
         </a>
     </div>
+    <div class="col expand">
+    </div>
+    <div class="col">
+        <a class="btn" data-command="viewerZoomIn">
+            <i class="zmdi zmdi-plus-circle-o"></i>
+        </a>
+    </div>
+    <div class="col">
+        <a class="btn" data-command="viewerZoomOut">
+            <i class="zmdi zmdi-minus-circle-outline"></i>
+        </a>
+    </div>
 </div>
