--- a/Journal/index.html
+++ b/Journal/index.html
@@ -103,6 +103,7 @@
 	<script type="text/javascript" src="app/services/selection.service.js"></script>
 	<script type="text/javascript" src="app/services/settings.service.js"></script>
 	<script type="text/javascript" src="app/services/sync.service.js"></script>
+	<script type="text/javascript" src="app/services/task.service.js"></script>
 	<script type="text/javascript" src="app/services/topic.service.js"></script>
 	<script type="text/javascript" src="app/services/translation.service.js"></script>
 	<script type="text/javascript" src="app/services/update.service.js"></script>
@@ -133,6 +134,7 @@
 	<script type="text/javascript" src="app/directives/art-tab-control/art-tab-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-tab-heading/art-tab-heading.js"></script>
 	<script type="text/javascript" src="app/directives/art-tab/art-tab.js"></script>
+	<script type="text/javascript" src="app/directives/art-task-control/art-task-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-topic-control/art-topic-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-update-indicator/art-update-indicator.js"></script>
 	<script type="text/javascript" src="app/directives/art-window-controls/art-window-controls.js"></script>
