--- a/Journal/app/directives/art-document-viewer/art-document-viewer.html
+++ b/Journal/app/directives/art-document-viewer/art-document-viewer.html
@@ -3,5 +3,5 @@
         HTML canvas is not supported by your browser.
     </canvas>
 
-    <art-document-viewer-toolbar style="position: absolute; top: 0; left: 0;"></art-document-viewer-toolbar>
+    <art-document-viewer-toolbar style="position: absolute; bottom: 0; left: 0;"></art-document-viewer-toolbar>
 </div>
