--- a/Journal/app/directives/art-settings-apps/art-settings-apps.html
+++ b/Journal/app/directives/art-settings-apps/art-settings-apps.html
@@ -1,6 +1,6 @@
 <form name="form">
     <div class="form-header">
-        <button class="btn btn-chromeless pull-right" style="position: relative; right -10px; top: -10px;" ng-click="reload()"><i class="zmdi zmdi-refresh-sync zmdi-lg"></i> <span class="btn-label">Refresh</span></button>
+        <button class="btn btn-chromeless pull-right" style="position: relative; right -10px; top: -10px;" ng-click="reload()"><i class="zmdi zmdi-lg zmdi-refresh-sync"></i> <span class="btn-label">Refresh</span></button>
 
         <p class="description">{{ 'SETTINGS.APPS.DESCRIPTION' | translate }}</p>
     </div>
