--- a/Journal/index.html
+++ b/Journal/index.html
@@ -110,6 +110,7 @@
 	<script type="text/javascript" src="app/services/viewer.service.js"></script>
 	<script type="text/javascript" src="app/services/window.service.js"></script>
 	<script type="text/javascript" src="app/filters/reverse.js"></script>
+	<script type="text/javascript" src="app/directives/art-avatar-img/art-avatar-img.js"></script>
 	<script type="text/javascript" src="app/directives/art-calendar/art-calendar.js"></script>
 	<script type="text/javascript" src="app/directives/art-chat-control/art-chat-control.js"></script>
 	<script type="text/javascript" src="app/directives/art-client-state-info/art-client-state-info.js"></script>
@@ -143,9 +144,9 @@
 	<script type="text/javascript" src="app/directives/ng-esc/ng-esc.js"></script>
 	<script type="text/javascript" src="app/dialogs/add-account-dialog/add-account-dialog.controller.js"></script>
 	<script type="text/javascript" src="app/dialogs/calendar-dialog/calendar-dialog.controller.js"></script>
+	<script type="text/javascript" src="app/dialogs/close-project-dialog/close-project-dialog.controller.js"></script>
 	<script type="text/javascript" src="app/dialogs/publish-file-dialog/publish-file-dialog.controller.js"></script>
 	<script type="text/javascript" src="app/dialogs/update-dialog/update-dialog.controller.js"></script>
-	<script type="text/javascript" src="app/dialogs/update-project-dialog/update-project-dialog.controller.js"></script>
 	<script type="text/javascript" src="app/views/file-list/file-list.controller.js"></script>
 	<script type="text/javascript" src="app/views/file-preview/file-preview.controller.js"></script>
 	<script type="text/javascript" src="app/views/file-view/file-view.controller.js"></script>
